# corgos-telegram-bot

./: .gitignore  Dockerfile  LICENSE  README.md  commandlist.md  corgos-telegram-bot.py  corgos_bot.py  docker-compose.yml  launcher.sh  pyproject.toml  reddit.py  requirements.txt  settings.json  settings.json.example
.github/workflows/: code.yml
corgos-telegram-bot/modules/: reddit.py  telegram.py
corgos_telegram_bot/: main.py
corgos_telegram_bot/modules/: reddit.py  settings.py  telegram.py
corgos_telegram_bot/tests/: test_reddit.py  test_settings.py
corgos_telegram_bot/tests/data/: reddit_unit_test_settings.json
modules/: reddit.py  settings.json.example  telegram.py
scripts/: main.py
scripts/corgos_telegram_bot/: reddit.py
scripts/modules/: reddit.py  settings.py  telegram.py
scripts/tests/: test_reddit.py  test_settings.py
tests/: test_reddit.py  test_settings.py  test_telegram.py
tests/data/: reddit_unit_test_settings.json  telegram_unit_test_settings.json
